# app-hound

./: .gitignore  CHANGELOG.md  Makefile  README.md  SHELL_ALIAS_ISSUE.md  SHELL_ALIAS_TROUBLESHOOTING.md  TODO.md  apps_config.json  main.py  pyproject.toml  refactoring-plan.md  requirements.txt
.github/: ACTIONS_TROUBLESHOOTING.md
.github/workflows/: release.yml  update_homebrew.yml
Formula/: app-hound.rb
examples/: README.md  chrome.json  discord.json  multi-app.json  slack.json  vscode.json
src/app_hound/: configuration.py  domain.py  finder.py  installer.py  interactive.py  main.py  removal.py  scanner.py  types.py  ui.py  validation.py
tests/: test_domain.py  test_finder.py  test_interactive.py  test_main.py  test_scanner.py  test_types.py
